MemoryMosaic/Styles/Pages/Collections.scss
/* Main collections page where user clicks collection thumbnail they want to view items of */
@import "../Mixins";

header {
	@include page-header(1px solid gray, 75px, 164px);

	> #collectionsText {
		font-size: 20px;
		margin-left: 10px;
		margin-right: 40px;
	}

	> #checkboxes {
		@include flex-col;
		position: absolute;
		right: 470px;
	}

	> #sortBtn {
		position: absolute;
		right: 250px;
	}
}

main {
	@include flex-main(row, 90px);
	flex-wrap: wrap;
	justify-content: flex-start;

	> a {
		position: relative;
		margin-bottom: 45px;
		margin-left: 25px;
		display: flex;
		flex-direction: column;

		> div {
			margin: 0;
			padding: 0;
			display: flex;
			justify-content: center;
			overflow: hidden;
			width: 200px;
			height: 200px;
			background-color: $CoverBackground;
			border-radius: 4px;
		}

		> span {
			width: 200px;
			overflow: hidden;
			white-space: nowrap;
			text-overflow: ellipsis;
			margin-top: 7px;
			margin-left: 5px;
		}
	}
}

